--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ div.cls_010{font-family:Arial,serif;font-size:10.1px;color:rgb(69,69,69);font-we
 </div>
 <div style="position:absolute;left:50%;margin-left:-306px;top:802px;width:612px;height:792px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
-<img src="f440e314-e187-11ea-8b25-0cc47a792c0a_id_f440e314-e187-11ea-8b25-0cc47a792c0a_files/background2.jpg" width=612 height=792></div>
+</div>
 <div style="position:absolute;left:26.45px;top:14.00px" class="cls_002"><span class="cls_002">8/19/2020</span></div>
 <div style="position:absolute;left:284.17px;top:14.00px" class="cls_002"><span class="cls_002">User:Nihit7/sandbox - Wikipedia</span></div>
 <div style="position:absolute;left:28.00px;top:27.25px" class="cls_004"><span class="cls_004">- Qtyapa which starred actors like Naveen Kasturia who later went on to become a household name in the</span></div>
@@ -106,7 +106,7 @@ div.cls_010{font-family:Arial,serif;font-size:10.1px;color:rgb(69,69,69);font-we
 </div>
 <div style="position:absolute;left:50%;margin-left:-306px;top:1604px;width:612px;height:792px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
-<img src="f440e314-e187-11ea-8b25-0cc47a792c0a_id_f440e314-e187-11ea-8b25-0cc47a792c0a_files/background3.jpg" width=612 height=792></div>
+</div>
 <div style="position:absolute;left:26.45px;top:14.00px" class="cls_002"><span class="cls_002">8/19/2020</span></div>
 <div style="position:absolute;left:284.17px;top:14.00px" class="cls_002"><span class="cls_002">User:Nihit7/sandbox - Wikipedia</span></div>
 <div style="position:absolute;left:28.00px;top:27.25px" class="cls_004"><span class="cls_004">cancelled  his  own  after  saying  'pencil',  the  guardian  of  Qtyap  decided  to  go  an  enchanting</span></div>
@@ -147,7 +147,7 @@ div.cls_010{font-family:Arial,serif;font-size:10.1px;color:rgb(69,69,69);font-we
 </div>
 <div style="position:absolute;left:50%;margin-left:-306px;top:2406px;width:612px;height:792px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
-<img src="f440e314-e187-11ea-8b25-0cc47a792c0a_id_f440e314-e187-11ea-8b25-0cc47a792c0a_files/background4.jpg" width=612 height=792></div>
+</div>
 <div style="position:absolute;left:26.45px;top:14.00px" class="cls_002"><span class="cls_002">8/19/2020</span></div>
 <div style="position:absolute;left:284.17px;top:14.00px" class="cls_002"><span class="cls_002">User:Nihit7/sandbox - Wikipedia</span></div>
 <div style="position:absolute;left:47.21px;top:28.00px" class="cls_007"><span class="cls_007">International Qtyap</span></div>
