--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ div.cls_010{font-family:Arial,serif;font-size:10.1px;color:rgb(69,69,69);font-we
 <body>
 <div style="position:absolute;left:50%;margin-left:-306px;top:0px;width:612px;height:792px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
-<img src="f440e314-e187-11ea-8b25-0cc47a792c0a_id_f440e314-e187-11ea-8b25-0cc47a792c0a_files/background1.jpg" width=612 height=792></div>
+</div>
 <div style="position:absolute;left:26.45px;top:14.00px" class="cls_002"><span class="cls_002">8/19/2020</span></div>
 <div style="position:absolute;left:284.17px;top:14.00px" class="cls_002"><span class="cls_002">User:Nihit7/sandbox - Wikipedia</span></div>
 <div style="position:absolute;left:28.00px;top:54.03px" class="cls_003"><span class="cls_003">Qtyap</span></div>
